[package]
name = "http_broker"
version = "0.1.0"
authors = ["MierBen <mrben838@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-utils = "2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.8"
indexmap = { version = "1.5.2", features = ["std"] }
konst = "0.2.4"
serde = "1"