[package]
name = "http_broker"
version = "0.1.0"
authors = ["MierBen <mrben838@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-utils = "3.0.0"
async-std = "1.9.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.8"
konst = "0.2.0"
serde = "1"